--- a/idiom/src/app/globals.css
+++ b/idiom/src/app/globals.css
@@ -25,3 +25,486 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+
+/*FROM IDIOM */
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.pushContainer {
+  height: 100vh;
+}
+
+/*----------------- LINKS  ----------------------------------*/
+.btnLink {
+  user-select: none;
+  border-radius: 20px;
+  border: 1px solid white;
+  background-color: white;
+  height: 50px;
+  width: 90%;
+  font-family: monospace;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: black;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.btnLink:hover {
+  box-shadow: -10px 5px 2px midnightblue;
+  background-color: #cbe1f6;
+}
+
+.link {
+  margin: 5%;
+  text-decoration: none;
+  color: black;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+/*------------------------ Buttons  Menu ------------------------------------------------*/
+.menu {
+  border-radius: 20px;
+  width: 90%;
+  margin: 1%;
+  display: flex;
+  flex-direction: row;
+  background-color: #c6d2e3;
+  z-index: 1;
+}
+
+.exerciseButton {
+  user-select: none;
+  border-radius: 20px;
+  border: 1px solid white;
+  background-color: white;
+  height: 50px;
+  width: 90%;
+  margin: 2%;
+  font-size: 1rem;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.menuButton {
+  user-select: none;
+  border-radius: 20px;
+  border: 1px solid white;
+  background-color: white;
+  height: 50%;
+  width: 20%;
+  padding: 1%;
+}
+
+.toolbarButton {
+  user-select: none;
+  border-radius: 20px;
+  border: 1px solid white;
+  background-color: white;
+  margin: 2%;
+  font-size: 2rem;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.exerciseLinkBtn {
+  user-select: none;
+  text-decoration: none;
+  border-radius: 15px;
+  color: black;
+  text-align: center;
+  background-color: white;
+}
+
+button:hover {
+  box-shadow: 0px 2px 0px rgb(0, 0, 0);
+  background-color: rgb(253, 240, 248);
+}
+
+.menuItems {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.menuItems>* {
+  margin: 2%;
+}
+
+/* ------------------------------LOGOS  -----------------------------------*/
+.smLogo {
+  /*background-image: url("./Images/idiomLogo.png")*/
+  /*background-image:url('./Images/cardDeck.svg');*/
+  width: 100px;
+  margin:3%;
+
+}
+
+/*///////////////////////  PAGES   //////////////////////////////////////*/
+/*Landing Page body*/
+.landingPage {
+  background-image: url("../../public/background.svg");
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.LandingPageSection {
+  background-color: #fc3dbd;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 5%;
+  margin-bottom: 25%;
+}
+.landingSectionCopy{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width:15%;
+}
+.homePage {
+/*pic update needed*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.loginFormPage {
+ /*pic update needed*/
+
+}
+
+.exercisePage {
+/*pic update needed*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/*////////////////////////////////////////////////////////////*/
+/*Login component*/
+input:focus {
+  outline: none;
+}
+
+input:invalid {
+  border: 7px dotted pink;
+}
+
+.LoginDisplay {
+  height: 100vh;
+  width: 100%;
+  background-color: #d860bac4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#loginContainer {
+  background-color: #4b2fa1;
+  border-radius: 20px;
+  box-shadow: -10px 10px 0px #31054c;
+  height: 75%;
+  width: 45%;
+  margin: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#loginInputContainer {
+  height: 22rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.loginInput {
+  height: 2rem;
+  width: 90%;
+  border-radius: 10px;
+  border: none;
+  font-size: large;
+}
+
+#loginInputContainer>button:hover {
+  box-shadow: -10px 5px 2px midnightblue;
+  background-color: #cbe1f6;
+}
+
+/*------------------ EXERCISES-------------------------*/
+.display {
+  border: 1px solid black;
+  background-color: rgb(198 210 227);
+  margin: 2%;
+  min-height: 350px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.displayROW {
+  border: 1px solid black;
+  background-color: rgb(198 210 227);
+  margin: 2%;
+  min-height: 350px;
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  border: 1px solid gray;
+  box-shadow: -10px 10px 5px lightsteelblue;
+  background-color: white;
+  min-height: 275px;
+  width: 40%;
+  margin: 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.8s;
+}
+
+.smallCard {
+  border: 1px solid gray;
+  box-shadow: -5px 5px 10px lightsteelblue;
+  background-color: white;
+  height: 7rem;
+  width: 75%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.smallCardSelected {
+  border: 2px dashed green;
+  box-shadow: -5px 5px 10px lightsteelblue;
+  background-color: white;
+  height: 7rem;
+  width: 75%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.smallCardTurnedOff {
+  border: 1px solid gray;
+  box-shadow: -5px 5px 10px lightsteelblue;
+  background-color: #cecece;
+  height: 7rem;
+  width: 75%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #949699;
+}
+
+/*.flip properties being applied directly in JS function in FlipExercise Component*/
+.flip {
+  transform: perspective(500px) rotateX(360deg);
+}
+
+.exerciseInput {
+  width: 45%;
+  height: 50px;
+  margin-top: 2%;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 3px solid black;
+  border-radius: 5px;
+  font-size: xx-large;
+}
+
+.CardColumn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 48%;
+}
+
+.CardColumn>* {
+  margin: 3%;
+}
+
+.buttonBox {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  margin: 2%;
+}
+
+/* ////////////////// HOMEPage components////////*/
+.toolbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 50%;
+}
+
+.toolbarButtonContainer {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+.toolbarButtonContainer>* {
+  margin: 3%;
+  padding: 1%;
+}
+
+#label_list {
+  border-radius: 5px;
+  background-color: rgb(123 147 180);
+  color: #10066e;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 1%;
+}
+
+#label_list>* {
+  margin: 5%;
+}
+
+/*-----------------------  FOLDERS ----------------------*/
+.folder {
+  height: 100px;
+  width: 150px;
+  margin: 3%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.folder:hover {
+  box-shadow: 3px 3px 10px white;
+}
+
+.folderTop {
+  background-color: #8eb3e7;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 5px;
+  height: 25px;
+  padding: 2%;
+  text-align: right;
+  font-family: monospace;
+  font-size: large;
+  color: black;
+}
+
+.folderBottom {
+  background-color: #8eb3e7;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  box-shadow: 5px -5px 0px white;
+  height: 80px;
+}
+
+/*-------------------------  SETS  ---------------------*/
+.set {
+  height: 80px;
+  width: 300px;
+  margin: 3%;
+  border-radius: 15px;
+  background-color: #6041f496;
+  box-shadow: -10px 15px 0px darkslateblue;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: whitesmoke;
+  font-size: X-large;
+
+}
+
+.set:hover {
+  box-shadow: -10px 15px 0px rgb(199, 196, 218);
+}
+
+.infoBox {
+  height: 35px;
+  width: 250px;
+}
+
+/* ---------- MEDIA QUERIES -----------*/
+/* for screens smaller than 600px         */
+@media screen and (max-width:600px) {
+  .menu {
+    flex-direction: column;
+    margin-top: 5%;
+
+  }
+
+  .menuItems {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .menuItems>* {
+    height: 3rem;
+  }
+
+  .toolbar {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  /*LANIDNG PAGE ON MOBILE*/
+  .LandingPageSection {
+    background-color: #fc3dbd;
+    display: flex;
+    flex-direction: column;
+  }
+
+  #loginContainer {
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .LandingPageLargeLogo {
+    display: none;
+  }
+
+  /*Exercise display*/
+  .display {
+    height: 30rem;
+    margin-top: 10%;
+  }
+
+  .card {
+    width: 90%;
+  }
+
+  .exerciseInput {
+    width: 90%;
+    margin-top: 15%;
+  }
+}
